<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pages.EntradaActivity$ConfigActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/Xleave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_leave_24"
            android:padding="1dp"
            android:contentDescription="@string/Leave" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/action_settings"
            android:textColor="@color/blueText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView


                    android:scaleType="centerCrop"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/User_icon"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/descricao_user_icon"
                    android:src="@drawable/baseline_account_circle_24"
                    app:shapeAppearanceOverlay="@style/CircularImageView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/usuario"
                    android:textColor="@color/blueText"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/DarkBlue"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

                    <LinearLayout
                        android:background="@drawable/round_back_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="40dp"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <!-- mudar tema -->
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <ImageView
                                android:id="@+id/ThemeMode"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ligth_mode_icon"
                                android:background="@drawable/round_back_white"
                                android:padding="6dp"
                                android:contentDescription="@string/Tema" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/ThemeMode"
                                android:text="@string/modo"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchTheme"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:switchMinWidth="50dp"
                                android:theme="@style/nigthModeSwicth"
                                 />
                        </RelativeLayout>

                        <!--mudar senha -->
                        <RelativeLayout
                            android:id="@+id/trocarSenha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <ImageView
                                android:id="@+id/Mudar"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/vector_lock"

                                android:padding="2dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/Mudar"
                                android:text="trocar senha"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:padding="8dp"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/arrow_icon"/>


                        </RelativeLayout>

                        <!--Sair da conta -->
                        <RelativeLayout
                            android:id="@+id/SairConta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <ImageView
                                android:id="@+id/SairContaImg"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/white_leave"

                                android:padding="2dp"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/SairContaImg"
                                android:text="Sair da conta"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:padding="8dp"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/arrow_icon"/>


                        </RelativeLayout>

                        <!--Excluir conta-->
                        <RelativeLayout
                            android:id="@+id/ExcluirConta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <ImageView
                                android:id="@+id/ExcluirContaImg"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/delete_icon"

                                />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/ExcluirContaImg"
                                android:text="Exluir conta"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:padding="8dp"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/arrow_icon"/>



                        </RelativeLayout>


                    </LinearLayout>

            </LinearLayout>
            
        </ScrollView>




</LinearLayout>